--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -47,11 +47,109 @@ input {
 /* #endregion */
 
 /* #region Search styles */
-
-.form {
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 36px;
+  margin: 0;
+}
+.section {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.form-search {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 8px;
+  margin-bottom: 32px;
+}
+.input-search {
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 272px;
+  height: 40px;
+  padding: 8px 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
+}
+.input-search:hover {
+  border-color: #000;
+}
+
+.input-search:focus {
+  border-color: #4e75ff;
+}
+.input-search::placeholder {
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #808080;
+}
+.btn-search {
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+  background-color: #4e75ff;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-search:hover {
+  background-color: #6c8cff;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 24px;
+  padding: 0;
+}
+.gallery-item {
+  border: 1px solid #808080;
+  width: 360px;
+  height: 200px;
+}
+.gallery__image {
+  width: 360px;
+  height: 152px;
+  padding: 0px;
+}
+
+.info {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 4px 0px;
+}
+.info-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+p {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33333;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
 }
 /* #endregion */
